--- a/sobre.html
+++ b/sobre.html
@@ -2,11 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Mirror Fashion</title>
+    <title>Sobre a Mirror Fashion</title>
+    <style>
+      p {
+        color: blue;
+        background-color: yellow;
+      }
+    </style>
+    <link rel="stylesheet" href="estilos.css" />
   </head>
+
   <body>
     <img src="img/logo.png" alt="Logo MirrorFashion" />
-    <h1>A Mirror Fashion</h1>
+    <h1><font color="red">Mirror Fashion anos 90</font></h1>
     <p>
       A <strong>Mirror Fashion</strong> é a maior empresa comércio eletrônico no
       segmento de moda em todo o mundo. Fundada em 1932, possui filiais em 124
@@ -30,8 +38,7 @@
       entre em contato se tiver dúvidas. Conheça também nossa história e nossos
       diferenciais.
     </p>
-    <h2>história</h2>
-
+    <h2>História</h2>
     <figure>
       <img src="img/familia-pelho.jpg" alt="Foto da família Pelho" />
       <figcaption>familia-Pelho</figcaption>
