--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <h1>Mirror Fashion.</h1>
+    <h1>Olá, sou o index.html!</h1>
     <h2>Bem vindo à Mirror Fashion, sua loja de roupas e acessoriórios.</h2>
     <ul>
       <li>Confira nossas Promoções.</li>
       <li>Receba informações sobre nossos lamçamentos por email.</li>
       <li>Navegue por todos nossos produtos em catálogo.</li>
+      ...Acesse <a href="index.html">nossa loja</a>...
       <li>Compre sem sair de casa.</li>
     </ul>
   </body>
