--- a/sobre.html
+++ b/sobre.html
@@ -3,13 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Sobre a Mirror Fashion</title>
-    <style>
-      p {
-        color: blue;
-        background-color: yellow;
-      }
-    </style>
-    <link rel="stylesheet" href="estilos.css" />
+    <link rel="stylesheet" href="css/sobre.css" />
   </head>
 
   <body>
@@ -22,7 +16,7 @@
       deles.
     </p>
     <p>
-      Nosso centro de distribuição fica em Jacarezinho, no Paraná. De lá, saem
+      Nosso centro de distribuição fica em <a href="https://maps.google.com.br/?q=Jacarezinho"> Jacarezinho, no Paraná</a>. De lá, saem
       48 aviões que distribuem nossos produtos às casas do mundo todo. Nosso
       centro de distribuição:
     </p>
@@ -41,7 +35,7 @@
     <h2>História</h2>
     <figure>
       <img src="img/familia-pelho.jpg" alt="Foto da família Pelho" />
-      <figcaption>familia-Pelho</figcaption>
+      <figcaption>Família-Pelho</figcaption>
     </figure>
     <p>
       A fundação em 1932 ocorreu no momento da descoberta econônica do interior
@@ -71,5 +65,21 @@
       do Brasil já visitaram as instalações da Mirror Fashion, além de
       presidentes da União Européia, Ásia e o secretário-geral da ONU.
     </p>
+    <h2>Diferenciais</h2>
+    <ul>
+      <li>Menor preço do varejo</li>
+      <li>Se você achar uma loja mais barata, leva o produto de graça</li>
+      ....
+    </ul>
+    <p>
+      Visite o site da <a href="http://www.caelum.com.br">Caelum</a>.
+    </p>
+    <p>Mais informações <a href="#info">aqui</a>.</p>
+    <p>Conteúdo da página...</p>
+    <h2 id="info">Mais informações sobre o assunto:</h2>
+    <p>Informações...</p>
+    <a href="http://www.caelum.com.br/curso/wd43/#contato">
+      Entre em contato sobre o curso
+    </a>
   </body>
 </html>
