--- a/index.html
+++ b/index.html
@@ -5,14 +5,34 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <h1>Olá, sou o index.html!</h1>
-    <h2>Bem vindo à Mirror Fashion, sua loja de roupas e acessoriórios.</h2>
-    <ul>
-      <li>Confira nossas Promoções.</li>
-      <li>Receba informações sobre nossos lamçamentos por email.</li>
-      <li>Navegue por todos nossos produtos em catálogo.</li>
-      ...Acesse <a href="index.html">nossa loja</a>...
-      <li>Compre sem sair de casa.</li>
-    </ul>
+    <header>
+      <!-- Conteúdo do cabeçalho -->
+      <h1><img src="img/logo.png" alt="Mirror Fashion" /></h1>
+      <p class="sacola"> Nenhum item na sacola de compras</p>
+      <nav>
+        <ul>
+          <li><a href="#">Sua conta</a></li>
+          <li><a href="#">Lista de Desejos</a></li>
+          <li><a href="#">Cartão Fidelidade</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="#">Ajuda</a></li>
+        </ul>
+        <nav id="menu-opcoes">
+      </nav>
+    </header>
+
+    <div id="main">
+      <!-- Conteúdo principal -->
+    <div class="info container">
+      <p>Conteúdo que deve ficar centralizado</p>
+    </div>
+
+    <div id="destaques">
+      <!-- Painéis com destaque -->
+    </div>
+
+    <footer>
+      <!-- Conteúdo do rodapé -->
+    </footer>
   </body>
 </html>
