--- a/sobre.html
+++ b/sobre.html
@@ -16,11 +16,13 @@
       deles.
     </p>
     <p>
-      Nosso centro de distribuição fica em <a href="https://maps.google.com.br/?q=Jacarezinho"> Jacarezinho, no Paraná</a>. De lá, saem
-      48 aviões que distribuem nossos produtos às casas do mundo todo. Nosso
-      centro de distribuição:
+      Nosso centro de distribuição fica em
+      <a href="https://maps.google.com.br/?q=Jacarezinho">
+        Jacarezinho, no Paraná</a
+      >. De lá, saem 48 aviões que distribuem nossos produtos às casas do mundo
+      todo. Nosso centro de distribuição:
     </p>
-    <figure>
+    <figure id="centro-distribuicao">
       <img
         src="img/centro-distribuicao.png"
         alt="Foto do centro de distribuição da Mirror Fashion"
@@ -29,11 +31,13 @@
     </figure>
     <p>
       Compre suas roupas e acessórios na Mirror Fashion. Acesse nossa loja ou
-      entre em contato se tiver dúvidas. Conheça também nossa história e nossos
+      entre em contato se tiver dúvidas. Conheça também nossa
+      <a href="#histooria">história</a> e nossos
+      <a href="#diferenciais">diferenciais</a>
       diferenciais.
     </p>
-    <h2>História</h2>
-    <figure>
+    <h2 id="historia">História</h2>
+      <figure id="familia-pelho">
       <img src="img/familia-pelho.jpg" alt="Foto da família Pelho" />
       <figcaption>Família-Pelho</figcaption>
     </figure>
@@ -65,21 +69,24 @@
       do Brasil já visitaram as instalações da Mirror Fashion, além de
       presidentes da União Européia, Ásia e o secretário-geral da ONU.
     </p>
-    <h2>Diferenciais</h2>
+    <h2 id="diferenciais">Diferenciais</h2>
     <ul>
       <li>Menor preço do varejo</li>
       <li>Se você achar uma loja mais barata, leva o produto de graça</li>
       ....
     </ul>
-    <p>
-      Visite o site da <a href="http://www.caelum.com.br">Caelum</a>.
-    </p>
-    <p>Mais informações <a href="#info">aqui</a>.</p>
+    <p>Visite o site da <a href="http://www.caelum.com.br">Caelum</a>.</p>
+    <p>Mais informações <a href="#info"> aqui</a>.</p>
     <p>Conteúdo da página...</p>
     <h2 id="info">Mais informações sobre o assunto:</h2>
     <p>Informações...</p>
     <a href="http://www.caelum.com.br/curso/wd43/#contato">
       Entre em contato sobre o curso
     </a>
+    <div id="rodape">
+      <img src="img/logo.png" alt="Logo da Mirror">
+
+      &copy; Copyright Mirror Fashion
+    </div>
   </body>
 </html>
