--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Mirror Fashion</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
-     <header>
+     <header class="container">
       <!-- Conteúdo do cabeçalho -->
        <h1><img src="img/logo.png" alt="Logo da Mirror Fashion"></h1>
        
@@ -27,12 +28,46 @@
 
     <div id="main">
       <!-- Conteúdo principal -->
-    <div class="info container">
     </div>
 
-    <div id="destaques">
+    <div id="destaques" class="container destaques">
       <!-- Painéis com destaque -->
+       <section class="Busca">
+        <h2>Busca</h2>
+
+        <form>
+          <input type="search">
+          <button>Buscar</button>
+        </form>
+       </section>
+       <!-- fim .busca -->
+
+       <section class="menu-departamentos">
+        <h2>Departamentos</h2>
+
+        <nav>
+          <ul>
+            <li><a href="#">Blusas e Camisas</a></li>
+            <li><a href="#">Calças</a></li>
+            <li><a href="#">Saia</a></li>
+            <li><a href="#">Vestidos</a></li>
+            <li><a href="#">Sapatos</a></li>
+            <li><a href="#">Bolsas e Carteiras</a></li>
+            <li><a href="#">Acessórios</a></li>
+          </ul>
+        </nav>
+       </section>
+       <!-- fim .menu-departamentos -->
+
+       <section class="banner-destaque">
+        <figure>
+          <img src="img/destaque-home.png" alt="Promoção: Big City Night">
+        </figure>
+       </section>
+       <!-- fim .banner-destaque -->
+
     </div>
+<!<!-- fim .contanier .destaque -->
 
     <footer>
       <!-- Conteúdo do rodapé -->
