--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Mirror Fashion</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/estilos.css" />
   </head>
   <body>
-     <header class="container">
+    <header class="container">
       <!-- Conteúdo do cabeçalho -->
-       <h1><img src="img/logo.png" alt="Logo da Mirror Fashion"></h1>
-       
-      <p class="sacola">
-         Nenhum item na sacola de compras
-        </p>
+      <h1><img src="img/logo.png" alt="Logo da Mirror Fashion" /></h1>
+
+      <p class="sacola">Nenhum item na sacola de compras</p>
 
       <nav class="menu-opcoes">
         <ul>
@@ -32,17 +30,17 @@
 
     <div id="destaques" class="container destaques">
       <!-- Painéis com destaque -->
-       <section class="Busca">
+      <section class="Busca">
         <h2>Busca</h2>
 
         <form>
-          <input type="search">
+          <input type="search" />
           <button>Buscar</button>
         </form>
-       </section>
-       <!-- fim .busca -->
+      </section>
+      <!-- fim .busca -->
 
-       <section class="menu-departamentos">
+      <section class="menu-departamentos">
         <h2>Departamentos</h2>
 
         <nav>
@@ -56,19 +54,133 @@
             <li><a href="#">Acessórios</a></li>
           </ul>
         </nav>
-       </section>
-       <!-- fim .menu-departamentos -->
+      </section>
+      <!-- fim .menu-departamentos -->
 
-       <section class="banner-destaque">
+      <section class="banner-destaque">
         <figure>
-          <img src="img/destaque-home.png" alt="Promoção: Big City Night">
+          <img src="img/destaque-home.png" alt="Promoção: Big City Night" />
         </figure>
-       </section>
-       <!-- fim .banner-destaque -->
-
+      </section>
+      <!-- fim .banner-destaque -->
     </div>
-<!<!-- fim .contanier .destaque -->
+    <!-- fim .contanier .destaque -->
+    <div class="container painéis">
+      <!-- os paineis de novidades e mais vendidos entrarão aqui dentro -->
 
+      <section class="painel novidades">
+        <h2>Novidades</h2>
+        <ol>
+          <!-- primeiro produto -->
+          <li>
+            <a href="produto.html">
+              <figure>
+                <img src="img/produtos/miniatura1.png" alt="miniatura1" />
+                <figcaption>Fuzz Cardigan por R$ 129,00</figcaption>
+              </figure>
+            </a>
+          </li>
+          <!-- fim do primeiro produto -->
+          <li>
+            <a href="produto.html">
+              <figure>
+                <img src="img/produtos/miniatura2.png" alt="miniatura1" />
+                <figcaption>Fuzz Cardigan por R$ 129,00</figcaption>
+              </figure>
+            </a>
+          </li>
+          <li>
+            <a href="produto.html">
+              <figure>
+                <img src="img/produtos/miniatura3.png" alt="miniatura1" />
+                <figcaption>Fuzz Cardigan por R$ 129,00</figcaption>
+              </figure>
+            </a>
+          </li>
+          <li>
+            <a href="produto.html">
+              <figure>
+                <img src="img/produtos/miniatura4.png" alt="miniatura1" />
+                <figcaption>Fuzz Cardigan por R$ 129,00</figcaption>
+              </figure>
+            </a>
+          </li>
+          <li>
+            <a href="produto.html">
+              <figure>
+                <img src="img/produtos/miniatura5.png" alt="miniatura1" />
+                <figcaption>Fuzz Cardigan por R$ 129,00</figcaption>
+              </figure>
+            </a>
+          </li>
+          <li>
+            <a href="produto.html">
+              <figure>
+                <img src="img/produtos/miniatura6.png" alt="miniatura1" />
+                <figcaption>Fuzz Cardigan por R$ 129,00</figcaption>
+              </figure>
+            </a>
+          </li>
+          <!-- coloque mais produtos aqui -->
+
+          <!-- coloque varios produtos aqui -->
+        </ol>
+      </section>
+      <section class="painel mais-vendidos">
+        <h2>Mais Vendidos</h2>
+        <ol>
+          <li>
+            <a href="produto.html">
+              <figure>
+                <img src="img/produtos/miniatura7.png" alt="miniatura1" />
+                <figcaption>Fuzz Cardigan por R$ 129,00</figcaption>
+              </figure>
+            </a>
+          </li>
+          <li>
+            <a href="produto.html">
+              <figure>
+                <img src="img/produtos/miniatura8.png" alt="miniatura1" />
+                <figcaption>Fuzz Cardigan por R$ 129,00</figcaption>
+              </figure>
+            </a>
+          </li>
+          <li>
+            <a href="produto.html">
+              <figure>
+                <img src="img/produtos/miniatura9.png" alt="miniatura1" />
+                <figcaption>Fuzz Cardigan por R$ 129,00</figcaption>
+              </figure>
+            </a>
+          </li>
+          <li>
+            <a href="produto.html">
+              <figure>
+                <img src="img/produtos/miniatura10.png" alt="miniatura1" />
+                <figcaption>Fuzz Cardigan por R$ 129,00</figcaption>
+              </figure>
+            </a>
+          </li>
+          <li>
+            <a href="produto.html">
+              <figure>
+                <img src="img/produtos/miniatura11.png" alt="miniatura1" />
+                <figcaption>Fuzz Cardigan por R$ 129,00</figcaption>
+              </figure>
+            </a>
+          </li>
+          <li>
+            <a href="produto.html">
+              <figure>
+                <img src="img/produtos/miniatura12.png" alt="miniatura1" />
+                <figcaption>Fuzz Cardigan por R$ 129,00</figcaption>
+              </figure>
+            </a>
+          </li>
+        </ol>
+      </section>
+    </div>
+    <!-- fim .container .paineis -->
     <footer>
       <!-- Conteúdo do rodapé -->
     </footer>
